--- a/makeyMakey/index.html
+++ b/makeyMakey/index.html
@@ -5,53 +5,77 @@
 		<script type="text/javascript" src="script/location.js"></script>
 		<script type="text/javascript" src="script/formGenerator.js"></script>
 		<script type="text/javascript" src="script/streaming.js"></script>
-
+		<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
 		<script>
 			console.log("things loaded");
 		</script>
 	</header>
 	<body>
-		<div id="wrapper">
-			<div id="devConsole" style = "background:teal;">
+		<div id="wrapper" class="span12 offset2">
+			<div class="span3">
+				<div style="float:left; margin-top:5px;"><span style="font-size:18px;">Streaming  : </span></div><div id="indicator" style="margin-left:10px; float:left; width:30px; height:30px;border-radius:20px; background-color:red;"></div>
+			</div>
+			<div class="span8">
+			<button  class="btn" onclick="(function(){document.getElementById('devConsole').style.display = '';})();">
+					Show DevConsole
+				</button>
+				<button  class="btn" onclick="(function(){document.getElementById('devConsole').style.display = 'none';})();">
+					Hide DevConsole
+				</button>
+			</div>
+			<div class="span8"id="devConsole" style = "background:gray; display:none">
+				<div class="span8">
 				<!--interval = setInterval(testThing,750);-->
-				<button onclick="(function(){interval = window.setInterval(testThing(),750)})();">
+				<button  class="btn" onclick="(function(){interval = window.setInterval(testThing(),750)})();">
 					Start Test Transmission
 				</button>
-				<button onclick="(function(){window.clearInterval(interval);console.log('Ceasing Testing.');})();">
+				<button  class="btn" onclick="(function(){window.clearInterval(interval);console.log('Ceasing Testing.');})();">
 					Stop Test Transmission
 				</button>
-				<button onclick="(function(){newFeed();})();">
+				<button  class="btn" onclick="(function(){newFeed();})();">
 					Add a New Feed
 				</button>
+		</div>
+				<div class="span8">
+					<div class="form-horizontal">
 				<form id="form2" onsubmit = "return apiKeySet()">
 					API KEY :
 					<input type="text" id="apiDevAccess" value="LEXFCUfXTzzUiPhvL0tSAAkJFkWSAKxLQkVLSExCMHlZTT0g">
-					<input type="submit"\>
+					<button class="btn" type="submit">Submit</button>
 				</form>
+				</div>
+				<div class="form-horizontal">
 				<form id="feedGetter" onsubmit = "return FeedGet()">
 					Feed Number : 
 					<input type="text" id="feedNum" value="105431"></input>
-					<input type="submit" \>
+					<button class="btn" type="submit">Submit</button>
 					
 				</form>
+				</div>
+				<div class="form-horizontal">
 				<form id="underscoreAdding" onsubmit = "return underScore()">
 					Name of Stuff : 
 					<input type="text" id="FEEDid" value="things that move"></input>
-					<input type="submit" \>
+					<button class="btn" type="submit">Submit</button>
 					
 				</form>
+				</div>
+				</div>
 			</div>
 			<div id="setup">
 			</div>
 
-			<div id="form">
-				<form id="selector" onsubmit = "return initialSet()">
+			<div id="form" class="well span12">
+				<div class="form-horizontal">
+				<form id="selector" onsubmit="return false;">
 					API KEY :
 					<input type="text" id="apiAccess">
 					Number of Inputs :
 					<input type="number" id="numOfFeeds" value=1 min=1 max=10>
-					<input type="submit">
+					<input class="btn" type="submit" onclick = "(function(){if(apiValidation(document.getElementById('apiAccess').value)){initialSet();}else{document.getElementById('APIfail').style.display='';}})();">
 				</form>
+				<span id="APIfail" class="label label-important"style="display:none;">Your API Key has failed to validate. Please try another one.</span>
+				</div>
 			</div>
 		</div>
 	</body>
