Finished MakeyMakey interface, also have feeds displaying on map now.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <a style="float:right;"class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
 </div>
 <div style="clear:both;">
-<div style="float:left;"class="label label-warning">Mostly feature complete.</div><div class="label label-important" style="float:right;">Barely outlined</div>
+<div style="float:left;"class="label label-success">Mostly feature complete.</div><div class="label label-important" style="float:right;">Outlined with map.</div>
 	</div>
 	</div>
 </body>
