Locally chosen information stays local. Is committed to locally based array which can be used for everything info wise and is updated as information comes in.

--- a/mapping/index.html
+++ b/mapping/index.html
@@ -29,6 +29,13 @@
 						<div id="selectedFeeds">
 							
 						</div>
+						<div id="listOfFeeds">
+							<h3>Overview of feeds</h3>
+							<h5>Displaying all the feeds selected.</h5>
+							<div id="quickInfoSummation">
+								
+							</div>
+						</div>
 					</div>
 				</div>
 				<div>
@@ -76,6 +83,7 @@
 		<script type= "text/javascript" src="script/jquery164.min.js"></script>
 	<script type="text/javascript" src="script/history.js"></script>
 	<script type="text/javascript" src="script/maps.js"></script>
+	<script type="text/javascript" src="script/feedOrdering.js"></script>
 	<script type="text/javascript" src="script/mapUpdater.js"></script>
 			<script src="script/location.js"></script>
 
