--- a/mapping/index.html
+++ b/mapping/index.html
@@ -27,7 +27,9 @@
 					<h1>Sound Mapping</h1>
 					<div class="wrapper">
 						<div id="selectedFeeds">
-							
+							<ul id="selectedFeedsList">
+								
+							</ul>
 						</div>
 						<div id="listOfFeeds">
 							<h3>Overview of feeds</h3>
@@ -77,10 +79,12 @@
 		</button>
 
 	</body>
+
 	<script type="text/javascript" src="script/zepto.min.js"></script>
 <!--	<script type="text/javascript" src="script/hammer.js"></script>-->
 	<script type="text/javascript" src = "script/transfers.js"></script>
-		<script type= "text/javascript" src="script/jquery164.min.js"></script>
+	<script type= "text/javascript" src="script/jquery164.min.js"></script>
+	<script type="text/javascript" src="script/highcharts.js"></script>
 	<script type="text/javascript" src="script/history.js"></script>
 	<script type="text/javascript" src="script/maps.js"></script>
 	<script type="text/javascript" src="script/feedOrdering.js"></script>
