added test folder, and finished the base logic of the project. Just to add the sound assignments now. Then maybe lots of re-factoring.

--- a/mapping/index.html
+++ b/mapping/index.html
@@ -87,6 +87,7 @@
 	<script type="text/javascript" src="script/highcharts.js"></script>
 	<script type="text/javascript" src="script/history.js"></script>
 	<script type="text/javascript" src="script/maps.js"></script>
+	<script type="text/javascript" src="script/audioSettings.js"></script>
 	<script type="text/javascript" src="script/feedOrdering.js"></script>
 	<script type="text/javascript" src="script/mapUpdater.js"></script>
 			<script src="script/location.js"></script>
