--- a/mapping/test/index.html
+++ b/mapping/test/index.html
@@ -10,15 +10,97 @@
 		</select>
 		<input type="checkbox" onChange = "printout(this.checked)"/>
 		<textarea onChange = "thingS(this.value)"></textarea>
+		<input type="button" onclick="testStuff()">
+		<div id="audioList">
+			
+		</div>
+		<div id="soundDiv">
+		</div>
 	</body>
 	<footer>
 		<script>
-		var thing = new Array(2);
-		thing[2] = "LOL";
-		console.log(thing);
-		thing = new Array();
-		thing.push("lol");
-		console.log(thing);
+		//var audio = new Audio().canPlayType('audio/ogg','audio/mp3', 'audio/wav');
+		//audio.setAttribute("src","../audio/samples/testSample.mp3");
+		//audio.setAttribute("src","../audio/samples/testSample.ogg");
+		//audio.setAttribute("src","../audio/samples/testSample.wav");
+		//audio.load();
+		//audio.play();
+		//
+		
+			addAudioList();
+function testStuff(){
+	console.log("testing");
+	var test = document.getElementsByClassName("hiddenAudioPlayers");
+		for(var i=0; i <test.length; i++){
+			test[i].play();
+		}
+}
+function addAudioList(){
+	var fileTypes = soundFiles.opts;
+	var stringToInsert = "<select id='addAudioMenu' onchange = (function(){addAudio(document.getElementById('addAudioMenu').value)})();>"
+	stringToInsert+="<option value = ''>- Select an audio track -</option>";
+	var songsSelected = [];
+	for(var key in soundFiles){
+		if(key != "opts"){
+			for(var i = 0; i < soundFiles[key].length; i++){
+				stringToInsert+="<option value = '"+key+"||"+soundFiles[key][i]+"'>"+soundFiles[key][i].replace(/_/g,' ')+"</option>";
+			}
+		}
+	}
+	stringToInsert += "</select>"
+	document.getElementById("audioList").innerHTML = stringToInsert;
+}
+function addAudio(songToAdd){
+	var songFolder = songToAdd.split("||")[0];
+	var songName = songToAdd.split("||")[1];
+	if(songToAdd != "" && document.getElementById(idPrefix+songFolder+songName) == undefined){
+		songsSelected.push(songName);
+		//now to add audio element
+		var insertString = "<audio class='hiddenAudioPlayers' id='"+idPrefix+songFolder+songName+"'>";
+		for(var i = 0; i < soundFiles.opts.length; i++){
+			//console.log(soundFiles.opts[i][0]);
+			insertString += "<source src='"+basePath+songFolder+"/"+songName+"."+soundFiles.opts[i][0]+"' type='audio/"+soundFiles.opts[i][1]+"'>";
+		}
+		insertString += "</audio>";
+		document.getElementById("soundDiv").innerHTML += insertString;
+		//document.getElementById(idPrefix + songFolder + songName).play();
+	}
+}
+
+function removeAudio(songToRemove){
+	var songFolder = songToAdd.split("||")[0];
+	var songName = songToAdd.split("||")[1];
+
+var element = document.getElementById(idPrefix + songFolder + songName);
+element.parentNode.removeChild(element);
+}
+
+function loadJSON(filePath) {
+  // Load json file;
+  var json = loadTextFileAjaxSync(filePath, "application/json");
+  // Parse json
+  return JSON.parse(json);
+}   
+
+function loadTextFileAjaxSync(filePath, mimeType){
+  var xmlhttp=new XMLHttpRequest();
+  xmlhttp.open("GET",filePath,false);
+  if (mimeType != null) {
+    if (xmlhttp.overrideMimeType) {
+      xmlhttp.overrideMimeType(mimeType);
+    }
+  }
+  xmlhttp.send();
+  if (xmlhttp.status==200)
+  {
+    return xmlhttp.responseText;
+  }
+  else {
+    // TODO Throw exception
+    return null;
+  }
+}
+		
 		function thingS(value){
 			//value = value.toString();
 			console.log(parseFloat(value.rep));
