Mostly feature complete now. Bugs and to-do is in the readme. Happy birthday me.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<h2>Welcome to a third year project!</h2>
 		<p>
 		<h5>This is a short bit of text to masquerade as content. You should also probably know that this is still
-			very heavily in development, and you should come back and check around May 22nd for the completed 
+			very heavily in development, and you should come back and check around May 2nd for the completed 
 			bit and piece!</h5>
 		</p>
 <div>	
@@ -15,7 +15,7 @@
 <a style="float:right;"class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
 </div>
 <div style="clear:both;">
-<div style="float:left;"class="label label-success">Mostly feature complete.</div><div class="label label-important" style="float:right;">Outlined with map.</div>
+<div style="float:left;"class="label label-success">Mostly feature complete.</div><div class="label label-warning" style="float:right;">Mostly feature complete. Needs UX stuff.</div>
 	</div>
 	</div>
 </body>
