--- a/mapping/index.html
+++ b/mapping/index.html
@@ -60,6 +60,9 @@
 							<div id="previewButton">
 								<input type="button" value="Sound not Loaded"/>
 							</div>
+							<div id="pauseButton">
+								<input type="button" value="Sound not Loaded"/>
+							</div>
 							<div id="addToListButton">
 								<input type="button" value="Add Sound To List"/>
 							</div>
