changes. Something something dark side.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <html>
-<header>
+	<header>
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-</header>
-<body>
-	<div class="offset3 span8 well">
-		<h2>Welcome to a third year project!</h2>
-		<p>
-		<h5>This is a short bit of text to masquerade as content. You should also probably know that this is still
-			very heavily in development, and you should come back and check around May 2nd for the completed 
-			bit and piece!</h5>
-		</p>
-<div>	
-<a style="float:left;" class = "btn btn-large btn-primary" href="makeyMakey">Link to the input page.</a>
-<a style="float:right;"class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
-</div>
-<div style="clear:both;">
-<div style="float:left;"class="label label-success">Mostly feature complete.</div><div class="label label-warning" style="float:right;">Mostly feature complete. Needs UX stuff.</div>
-	</div>
-	</div>
-</body>
+	</header>
+	<body>
+		<div class="offset3 span8 well">
+			<h2>Welcome to a third year project!</h2>
+			<p>
+				<h5>This is a short bit of text to masquerade as content. You should also probably know that this is still
+				very heavily in development, and you should come back and check around May 2nd for the completed
+				bit and piece!</h5>
+			</p>
+
+			<div>
+				<a style="float:left;" class = "btn btn-large btn-primary" href="makeyMakey">Link to the input page.</a>
+				<a style="float:right;"class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
+			</div>
+			<div style="clear:both;">
+				<div style="float:left;"class="label label-success">
+					Mostly feature complete.
+				</div>
+				<div class="label label-warning" style="float:right;">
+					Mostly feature complete. Needs UX stuff.
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
