Got API key checking added along with query key modification.

--- a/mapping/index.html
+++ b/mapping/index.html
@@ -16,7 +16,11 @@
 					<h1>Feed Selection</h1>
 					<!--cosm API -->
 					<div class="wrapper">
+						<div id="mapWrapper">
+						<label>Change the value in the box to change the search parameter: </label>
+						<input type="text" onchange="question = this.value"/>
 						<div id="map"></div>
+						</div>
 						<div id="feedList"><h2> Click on a marker for more information!</h2></div>
 					</div>
 				</div>
@@ -92,7 +96,19 @@
 				</li>
 
 		</ul>
-
+	<div id="overlay">
+		<div id="formVerifyContainer">
+			<form id="formVerify" onsubmit="return false;">
+					<label>API KEY : </label>
+					<input type="text" id="apiAccess" value="LEXFCUfXTzzUiPhvL0tSAAkJFkWSAKxLQkVLSExCMHlZTT0g">
+					<label>Search Query : </label>
+					<input type="text" id="apiQueryAccess" value="arduino">
+					<button class="normal" type="submit" onclick = "validateAPIkey()">Submit</button>
+				</form>
+					<span id="APIfail" class="label label-important"style="display:none;">Your API Key has failed to validate. Please try another one.</span>
+					<span id="QUESTIONfail" class="label label-important"style="display:none;">Your Query string is empty. Please try another one.</span>
+		</div>	
+	</div>
 		<header>
 			
 		</header>
