--- a/mapping/index.html
+++ b/mapping/index.html
@@ -18,7 +18,7 @@
 					<div class="wrapper">
 						<div id="mapWrapper">
 						<label>Change the value in the box to change the search parameter: </label>
-						<input type="text" onchange="question = this.value"/>
+						<input type="text" id = "queryBox" onchange="question = this.value"/>
 						<div id="map"></div>
 						</div>
 						<div id="feedList"><h2> Click on a marker for more information!</h2></div>
@@ -96,7 +96,7 @@
 				</li>
 
 		</ul>
-	<div id="overlay">
+	<div id="overlay" style="display:none;">
 		<div id="formVerifyContainer">
 			<form id="formVerify" onsubmit="return false;">
 					<label>API KEY : </label>
