updated index.html and README.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<div style="float:left;"class="label label-success">
 					Mostly feature complete.
 				</div>
-				<div class="label label-warning" style="float:right;">
-					Mostly feature complete. Needs UX stuff.
+				<div class="label label-success" style="float:right;">
+					Needs UX testing.
 				</div>
 			</div>
 		</div>
