--- a/mapping/index.html
+++ b/mapping/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Slideshow Test</title>
+		<title>Make the Cosm</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" href="styles.css" type="text/css">
 		<link rel='stylesheet' href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css'>
