--- a/makeyMakey/index.html
+++ b/makeyMakey/index.html
@@ -13,15 +13,15 @@
 	<body>
 		<div id="wrapper" class="span12 offset2">
 			<div class="span3">
-				<div style="float:left; margin-top:5px;"><span style="font-size:18px;">Streaming  : </span></div><div id="indicator" style="margin-left:10px; float:left; width:30px; height:30px;border-radius:20px; background-color:red;"></div>
+				<div id="streamingBanner"style="float:left; margin-top:5px;display:none;"><span style="font-size:18px;">Streaming  : </span></div><div id="indicator" style="margin-left:10px; float:left; width:30px; display:none; height:30px;border-radius:20px; background-color:red;"></div>
 			</div>
 			<div class="span8">
-			<button  class="btn" onclick="(function(){document.getElementById('devConsole').style.display = '';})();">
+		<!--	<button  class="btn" onclick="(function(){document.getElementById('devConsole').style.display = '';})();">
 					Show DevConsole
 				</button>
 				<button  class="btn" onclick="(function(){document.getElementById('devConsole').style.display = 'none';})();">
 					Hide DevConsole
-				</button>
+				</button>-->
 			</div>
 			<div class="span8"id="devConsole" style = "background:gray; display:none">
 				<div class="span8">
@@ -40,7 +40,7 @@
 					<div class="form-horizontal">
 				<form id="form2" onsubmit = "return apiKeySet()">
 					API KEY :
-					<input type="text" id="apiDevAccess" value="LEXFCUfXTzzUiPhvL0tSAAkJFkWSAKxLQkVLSExCMHlZTT0g">
+					<input type="text" id="apiDevAccess" value="">
 					<button class="btn" type="submit">Submit</button>
 				</form>
 				</div>
@@ -67,14 +67,36 @@
 
 			<div id="form" class="well span12">
 				<div class="form-horizontal">
-				<form id="selector" onsubmit="return false;">
+					<h3>Welcome to part of Make the Cosm!</h3>
+				<p> 
+					You are about to be asked for your location information. All we need this for is to plot your location.	
+				</p>
+				<p>
+					Both a Cosm API key and Cosm account are required to use this web application, as it retrieves information 
+					from the Cosm web servers. To sign up for an account visit <a href="http://www.cosm.com" target="_blank"> the Cosm homepage</a>.
+				</p>
+				<p>Once you have obtained an API key, fill in the data below and click on 'Submit'.</p>
+				<p><em>Warning : </em>Using one API key for two separate MakeTheCosm instances will cause malfunctions.</p>
+				<form id="selector" onsubmit="return false;" style="margin-top:20px">
 					API KEY :
 					<input type="text" id="apiAccess">
 					Number of Inputs :
 					<input type="number" id="numOfFeeds" value=1 min=1 max=10>
 					<input class="btn" type="submit" onclick = "(function(){if(apiValidation(document.getElementById('apiAccess').value)){initialSet();}else{document.getElementById('APIfail').style.display='';}})();">
+				<span id="APIfail" class="label label-important"style="display:none;">Your API Key has failed to validate or is missing. Please try another one.</span>
 				</form>
-				<span id="APIfail" class="label label-important"style="display:none;">Your API Key has failed to validate. Please try another one.</span>
+				<h3>
+					Detailed user instructions
+				</h3>
+			<!--	<p> A short video introduction can be found <a href="http://www.youtube.com/watch?v=qG-mHjIwtVs" target="_blank">here</a>.</p>-->
+				<p>
+					To use a Makey Makey with this (or any other USB device capable of simulating a keyboard), simply plug it in
+					 and wait for its' drivers to finish installing, then use as trigger.
+				</p>
+				<p>
+					This application is based on an interactive form which lets the user add or subtract inputs and then stream them 
+					to the Cosm data service for other people to access and use.
+				</p>
 				</div>
 			</div>
 		</div>
