Cleared up and fixed a final bug.

--- a/makeyMakey/index.html
+++ b/makeyMakey/index.html
@@ -88,7 +88,7 @@
 				<h3>
 					Detailed user instructions
 				</h3>
-			<!--	<p> A short video introduction can be found <a href="http://www.youtube.com/watch?v=qG-mHjIwtVs" target="_blank">here</a>.</p>-->
+				<p> A short video introduction can be found <a href="http://www.youtube.com/watch?v=HR8AHtdqaDQ" target="_blank">here</a>.</p>
 				<p>
 					To use a Makey Makey with this (or any other USB device capable of simulating a keyboard), simply plug it in
 					 and wait for its' drivers to finish installing, then use as trigger.
