--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 
 			<div>
 				<a style="float:left;" class = "btn btn-large btn-primary" href="makeyMakey">Link to the input page.</a>
-				<a style="float:right;"class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
+				
+				
+				<a style="float:right;"	class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
+				<a style="float:left;clear:both;" class = "btn btn-primary" href="http://www.youtube.com/watch?v=HR8AHtdqaDQ">Link to "How To" video.</a>
+				<a style="float:right;" class = "btn btn-primary" href="http://www.youtube.com/watch?v=qG-mHjIwtVs&feature=youtu.be">Link to "How To" video.</a>
 			</div>
 			<div style="clear:both;">
 				<div style="float:left;"class="label label-success">
 					Mostly feature complete.
 				</div>
 				<div class="label label-success" style="float:right;">
-					Needs UX testing.
+					Mostly feature complete.
 				</div>
 			</div>
 		</div>
