--- a/mapping/index.html
+++ b/mapping/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Make the Cosm</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="stylesheet" href="styles.css" type="text/css">
+		<link rel="stylesheet" href="css/styles.css" type="text/css">
 		<link rel='stylesheet' href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css'>
 		<script src="http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js"></script>
 	</head>
