Sorted converting from Cosm to Xively. Oh yes. Ready to present now.

--- a/index.html
+++ b/index.html
@@ -4,28 +4,33 @@
 	</header>
 	<body>
 		<div class="offset3 span8 well">
-			<h2>Welcome to a third year project!</h2>
+			<h2>Welcome to Make The Cosm!</h2>
 			<p>
-				<h5>This is a short bit of text to masquerade as content. You should also probably know that this is still
-				very heavily in development, and you should come back and check around May 2nd for the completed
-				bit and piece!</h5>
+				Even though the third party service is now called "Xively" from "Cosm", the entire project is titled based on a pun, so that's not changing.
 			</p>
-
+			<p>
+				The Mapping segment takes an API key and search term and creates an interactive geographic graph of the data, which the user can assign sounds 
+				to to also create dynamically changing music.
+			</p>
+			<p>
+				The Input segment also takes an API key, and then enables the user to connect any USB keyboard device and stream to Xively using it as an input device.
+			</p>
+			<p>
+				As this is an academic project instead of a labor of love, there is much tedious writing involved, which can be found <a href="dissertation/index.html" target="_blank">here</a>.
+			</p>
+			<p>
+				Owing to the recent re-branding of Cosm to Xively, the videos accompanying this project are outdated, but there are more on the way soon!
+			</p>
+			<p>
+				If anything goes wrong, or you have any thoughts or inputs, please feel free to contact me <a target="_blank" href="mailto:alex@amroche.co.uk?Subject=MakeTheCosm%20Project">here</a>.
+			</p>
 			<div>
-				<a style="float:left;" class = "btn btn-large btn-primary" href="makeyMakey">Link to the input page.</a>
+				<a style="float:left;" target="_blank" class = "btn btn-large btn-primary" href="makeyMakey">Link to the input page.</a>
 				
 				
-				<a style="float:right;"	class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
-				<a style="float:left;clear:both;" class = "btn btn-primary" href="http://www.youtube.com/watch?v=HR8AHtdqaDQ">Link to "How To" video.</a>
-				<a style="float:right;" class = "btn btn-primary" href="http://www.youtube.com/watch?v=qG-mHjIwtVs&feature=youtu.be">Link to "How To" video.</a>
-			</div>
-			<div style="clear:both;">
-				<div style="float:left;"class="label label-success">
-					Mostly feature complete.
-				</div>
-				<div class="label label-success" style="float:right;">
-					Mostly feature complete.
-				</div>
+				<a style="float:right;"	target="_blank" class = "btn btn-large btn-primary" href="mapping">Link to the map page.</a>
+				<a style="float:left;clear:both;" target="_blank"class = "btn btn-primary" href="http://www.youtube.com/watch?v=HR8AHtdqaDQ">Link to "How To" video.</a>
+				<a style="float:right;" target="_blank"class = "btn btn-primary" href="http://www.youtube.com/watch?v=qG-mHjIwtVs&feature=youtu.be">Link to "How To" video.</a>
 			</div>
 		</div>
 	</body>
