--- a/makeyMakey/index.html
+++ b/makeyMakey/index.html
@@ -47,7 +47,7 @@
 				<div class="form-horizontal">
 				<form id="feedGetter" onsubmit = "return FeedGet()">
 					Feed Number : 
-					<input type="text" id="feedNum" value="105431"></input>
+					<input type="text" id="feedNum" value=""></input>
 					<button class="btn" type="submit">Submit</button>
 					
 				</form>
@@ -72,8 +72,8 @@
 					You are about to be asked for your location information. All we need this for is to plot your location.	
 				</p>
 				<p>
-					Both a Cosm API key and Cosm account are required to use this web application, as it retrieves information 
-					from the Cosm web servers. To sign up for an account visit <a href="http://www.cosm.com" target="_blank"> the Cosm homepage</a>.
+					Both a Xively API key and Xively account are required to use this web application, as it retrieves information 
+					from the Xively web servers. To sign up for an account visit <a href="http://www.xively.com" target="_blank"> the Xively homepage</a>.
 				</p>
 				<p>Once you have obtained an API key, fill in the data below and click on 'Submit'.</p>
 				<p><em>Warning : </em>Using one API key for two separate MakeTheCosm instances will cause malfunctions.</p>
@@ -95,7 +95,7 @@
 				</p>
 				<p>
 					This application is based on an interactive form which lets the user add or subtract inputs and then stream them 
-					to the Cosm data service for other people to access and use.
+					to the Xively data service for other people to access and use.
 				</p>
 				</div>
 			</div>
