--- a/mapping/index.html
+++ b/mapping/index.html
@@ -106,8 +106,8 @@
 					You are about to be asked for your location information. All we need this for is to plot your location.	
 				</p>
 				<p>
-					Both a Cosm API key and Cosm account are required to use this web application, as it retrieves information 
-					from the Cosm web servers. To sign up for an account visit <a href="http://www.cosm.com" target="_blank"> the Cosm homepage</a>.
+					Both a Xively API key and Xively account are required to use this web application, as it retrieves information 
+					from the Xively web servers. To sign up for an account visit <a href="http://www.xively.com" target="_blank"> the Xively homepage</a>.
 				</p>
 				<p><em>Warning : </em>Using one API key for two separate MakeTheCosm instances will cause malfunctions.</p>
 			<form id="formVerify" onsubmit="return false;">
